--- a/simplimmo/Dockerfile
+++ b/simplimmo/Dockerfile
@@ -3,7 +3,8 @@ RUN apt-get update
 RUN docker-php-ext-install mysqli && docker-php-ext-enable mysqli \
 && apt-get install -y libicu-dev \
 && docker-php-ext-configure intl \
-&& docker-php-ext-install intl
+&& docker-php-ext-install intl \
+&& docker-php-ext-install pdo_mysql
 WORKDIR /var/www/html
 COPY index.php index.php
 EXPOSE 7777
